Update swag
update swag 12/10/2020
