# backend/docs/swagger.json
@@ -470,14 +470,14 @@
                 }
             }
         },
-        "/pregnants": {
+        "/patients": {
             "get": {
-                "description": "list pregnant entities",
+                "description": "list patient entities",
                 "produces": [
                     "application/json"
                 ],
-                "summary": "List pregnant entities",
-                "operationId": "list-pregnant",
+                "summary": "List patient entities",
+                "operationId": "list-patient",
                 "parameters": [
                     {
                         "type": "integer",
@@ -498,7 +498,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/ent.Pregnant"
+                                "$ref": "#/definitions/ent.Patient"
                             }
                         }
                     },
@@ -517,23 +517,23 @@
                 }
             },
             "post": {
-                "description": "Create pregnant",
+                "description": "Create patient",
                 "consumes": [
                     "application/json"
                 ],
                 "produces": [
                     "application/json"
                 ],
-                "summary": "Create pregnant",
-                "operationId": "create-pregnant",
+                "summary": "Create patient",
+                "operationId": "create-patient",
                 "parameters": [
                     {
-                        "description": "Pregnant entity",
-                        "name": "pregnant",
+                        "description": "Patient entity",
+                        "name": "patient",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/ent.Pregnant"
+                            "$ref": "#/definitions/ent.Patient"
                         }
                     }
                 ],
@@ -541,7 +541,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/ent.Pregnant"
+                            "$ref": "#/definitions/ent.Patient"
                         }
                     },
                     "400": {
@@ -559,18 +559,18 @@
                 }
             }
         },
-        "/pregnants/{id}": {
+        "/patients/{id}": {
             "get": {
-                "description": "get pregnant by ID",
+                "description": "get patient by ID",
                 "produces": [
                     "application/json"
                 ],
-                "summary": "Get a pregnant entity by ID",
-                "operationId": "get-pregnant",
+                "summary": "Get a patient entity by ID",
+                "operationId": "get-patient",
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "Pregnant ID",
+                        "description": "Patient ID",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -580,7 +580,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/ent.Pregnant"
+                            "$ref": "#/definitions/ent.Patient"
                         }
                     },
                     "400": {
@@ -604,30 +604,30 @@
                 }
             },
             "put": {
-                "description": "update pregnant by ID",
+                "description": "update patient by ID",
                 "consumes": [
                     "application/json"
                 ],
                 "produces": [
                     "application/json"
                 ],
-                "summary": "Update a pregnant entity by ID",
-                "operationId": "update-pregnant",
+                "summary": "Update a patient entity by ID",
+                "operationId": "update-patient",
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "Pregnant ID",
+                        "description": "Patient ID",
                         "name": "id",
                         "in": "path",
                         "required": true
                     },
                     {
-                        "description": "Pregnant entity",
-                        "name": "pregnant",
+                        "description": "Patient entity",
+                        "name": "patient",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/ent.Pregnant"
+                            "$ref": "#/definitions/ent.Patient"
                         }
                     }
                 ],
@@ -635,7 +635,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/ent.Pregnant"
+                            "$ref": "#/definitions/ent.Patient"
                         }
                     },
                     "400": {
@@ -653,16 +653,16 @@
                 }
             },
             "delete": {
-                "description": "get pregnant by ID",
+                "description": "get patient by ID",
                 "produces": [
                     "application/json"
                 ],
-                "summary": "Delete a pregnant entity by ID",
-                "operationId": "delete-pregnant",
+                "summary": "Delete a patient entity by ID",
+                "operationId": "delete-patient",
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "Pregnant ID",
+                        "description": "Patient ID",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -948,7 +948,7 @@
                 "getmom": {
                     "description": "GETMOM holds the value of the GETMOM edge.",
                     "type": "object",
-                    "$ref": "#/definitions/ent.Pregnant"
+                    "$ref": "#/definitions/ent.Patient"
                 },
                 "getstatus": {
                     "description": "GETSTATUS holds the value of the GETSTATUS edge.",
@@ -992,29 +992,29 @@
                 }
             }
         },
-        "ent.Pregnant": {
+        "ent.Patient": {
             "type": "object",
             "properties": {
-                "PREGNANT_AGE": {
-                    "description": "PREGNANTAGE holds the value of the \"PREGNANT_AGE\" field.",
-                    "type": "integer"
-                },
-                "PREGNANT_NAME": {
-                    "description": "PREGNANTNAME holds the value of the \"PREGNANT_NAME\" field.",
-                    "type": "string"
-                },
                 "edges": {
-                    "description": "Edges holds the relations/edges for other nodes in the graph.\nThe values are being populated by the PregnantQuery when eager-loading is set.",
+                    "description": "Edges holds the relations/edges for other nodes in the graph.\nThe values are being populated by the PatientQuery when eager-loading is set.",
                     "type": "object",
-                    "$ref": "#/definitions/ent.PregnantEdges"
+                    "$ref": "#/definitions/ent.PatientEdges"
                 },
                 "id": {
                     "description": "ID of the ent.",
                     "type": "integer"
+                },
+                "patient_age": {
+                    "description": "PatientAge holds the value of the \"patient_age\" field.",
+                    "type": "integer"
+                },
+                "patient_name": {
+                    "description": "PatientName holds the value of the \"patient_name\" field.",
+                    "type": "string"
                 }
             }
         },
-        "ent.PregnantEdges": {
+        "ent.PatientEdges": {
             "type": "object",
             "properties": {
                 "setmom": {
