# backend/ent/schema/antenatal.go
@@ -23,7 +23,7 @@ func (Antenatal) Fields() []ent.Field {
 // Edges of the Antenatal.
 func (Antenatal) Edges() []ent.Edge {
 	return []ent.Edge{
-		edge.From("GETMOM", Pregnant.Type).Ref("SETMOM").Unique(),
+		edge.From("GETMOM", Patient.Type).Ref("SETMOM").Unique(),
 		edge.From("TAKECARE", User.Type).Ref("CARE").Unique(),
 		edge.From("GETSTATUS", Babystatus.Type).Ref("SETSTATUS").Unique(),
 	}
